--- a/src/Weather.css
+++ b/src/Weather.css
@@ -32,8 +32,8 @@
     line-height: 64px;
 }
 .Weather img{
-    height: 64px;
-    width: 64px;
+    height: 100px;
+    width: 100px;
     margin-right: 10px;
     display: inline-block;
 }
@@ -49,4 +49,5 @@
 
 .Weather .temperatureContainer {
     display: inline-block;
+    height: 100%;
 }
