--- a/src/Weather.css
+++ b/src/Weather.css
@@ -5,9 +5,6 @@
     border-radius: 4px;
     color: rgb(135, 135, 135);
 }
-.Weather form{
-    margin-bottom: 20px;
-}
 .Weather h1 {
     font-size: 24px;
     font-weight: 100;
@@ -26,24 +23,23 @@
 }
 .Weather .temperature{
     font-weight: bold;
-    color: rgb (33, 33, 33);
+    color: black;
     font-size: 64px;
     font-weight: 400;
     line-height: 64px;
+    margin-left: 5px;
+    margin-left: 10px;
 }
-.Weather img{
-    height: 100px;
-    width: 100px;
-    margin-right: 1px;
-    display: inline-block;
+.Weather canvas{
+   
+    margin: 10px auto;
 }
 .Weather .unit{
     color: rgb(33, 33, 33);
     font-size: 16px;
     font-weight: 400;
     position: relative;
-    top: -32px;
-    margin-left: 5px;
+    top: -34px;
     line-height: 1;
 }
 
