--- a/src/Weather.css
+++ b/src/Weather.css
@@ -18,6 +18,11 @@
     background: rgb(130, 118, 226);
     border-color: rgb(130, 118, 226);
 }
+.Weather .btn:hover {
+    background: white;
+    color: rgb(130, 118, 226);
+    transition: all 0.5s ease-out ;
+}
 .Weather ul{
     margin: 0;
     padding: 0;
